--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas - Dev Front-End</title>
     <link rel="icon" type="image/x-icon" href="./favicon.png">
     <link rel="stylesheet" href="./scss/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Primary Meta Tags -->
+<title>Lucas - Dev Front-End</title>
+<meta name="title" content="Lucas - Dev Front-End" />
+<meta name="description" content="Front end developer" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://sluucas.github.io/portifolio/" />
+<meta property="og:title" content="Lucas - Dev Front-End" />
+<meta property="og:description" content="Front end developer" />
+<meta property="og:image" content="https://sluucas.github.io/portifolio/thumb.jpg" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://sluucas.github.io/portifolio/" />
+<meta property="twitter:title" content="Lucas - Dev Front-End" />
+<meta property="twitter:description" content="Front end developer" />
+<meta property="twitter:image" content="https://sluucas.github.io/portifolio/thumb.jpg" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
     
