--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <meta property="og:url" content="https://sluucas.github.io/portifolio/" />
 <meta property="og:title" content="Lucas - Dev Front-End" />
 <meta property="og:description" content="Front end developer" />
-<meta property="og:image" content="https://sluucas.github.io/portifolio/thumb.jpg" />
+<meta property="og:image" content="./thumb.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://sluucas.github.io/portifolio/" />
 <meta property="twitter:title" content="Lucas - Dev Front-End" />
 <meta property="twitter:description" content="Front end developer" />
-<meta property="twitter:image" content="https://sluucas.github.io/portifolio/thumb.jpg" />
+<meta property="twitter:image" content="./thumb.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 </head>
